force-app/main/default/objects/Premise__c/Premise__c.object-meta.xml
<CustomObject>
    <label>Premise</label>
    <nameField>
        <label>Premise  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>