force-app/main/default/objects/Premise__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address1</label>
    <length>28</length>
    <type>Text</type>
</CustomField>