force-app/main/default/objects/Premise__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Chittor</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Annmayya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>