force-app/main/default/objects/Premise__c/fields/Door_No__c.field-meta.xml
<CustomField>
    <fullName>Door_No__c</fullName>
    <label>Door No</label>
    <length>26</length>
    <type>Text</type>
</CustomField>