force-app/main/default/objects/Premise__c/fields/Premises_Name__c.field-meta.xml
<CustomField>
    <fullName>Premises_Name__c</fullName>
    <label>Premises Name</label>
    <length>29</length>
    <type>Text</type>
</CustomField>